Added Loader Form.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ ugprv_hid_connector/obj/Release/
 ugprv_ui_elements/bin/Debug/
 ugprv_ui_elements/obj/Debug/
 ugprv_ui_elements/obj/Release/
+ugprv_mma/bin/Debug/
+ugprv_mma/obj/Debug/
