--- a/ugprv_client/ugprv_client.vbproj
+++ b/ugprv_client/ugprv_client.vbproj
@@ -73,6 +73,9 @@
     <ApplicationManifest>My Project\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="OpenMFL">
+      <HintPath>..\..\OpenMFL\OpenMFL\bin\Debug\OpenMFL.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
@@ -104,6 +107,12 @@
       <DependentUpon>frmFlightMain.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="frmMain.Designer.vb">
+      <DependentUpon>frmMain.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmMain.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -123,6 +132,9 @@
   <ItemGroup>
     <EmbeddedResource Include="frmFlightMain.resx">
       <DependentUpon>frmFlightMain.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmMain.resx">
+      <DependentUpon>frmMain.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
@@ -165,6 +177,10 @@
     <ProjectReference Include="..\ugprv_hid_connector\ugprv_hid_connector.vbproj">
       <Project>{929cea4a-9ba0-4f5e-b0c0-80cb46fd60ba}</Project>
       <Name>ugprv_hid_connector</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ugprv_mma\ugprv_mma.csproj">
+      <Project>{3f19c035-ad27-4c88-817d-e2abc550767d}</Project>
+      <Name>ugprv_mma</Name>
     </ProjectReference>
     <ProjectReference Include="..\ugprv_ui_elements\ugprv_ui_elements.csproj">
       <Project>{1d3163e6-dc65-4595-9d51-4fd9174f2f61}</Project>
