--- a/ugprv_client/ugprv_client.vbproj
+++ b/ugprv_client/ugprv_client.vbproj
@@ -11,7 +11,7 @@
     <AssemblyName>ugprv_client</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>WindowsForms</MyType>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
@@ -28,6 +28,7 @@
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>x64</PlatformTarget>
@@ -73,9 +74,6 @@
     <ApplicationManifest>My Project\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="OpenMFL">
-      <HintPath>..\..\OpenMFL\OpenMFL\bin\Debug\OpenMFL.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
@@ -174,6 +172,10 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\OpenMFL\OpenMFL\OpenMFL.vbproj">
+      <Project>{b2363d78-a4bd-4570-8340-9484e8b51d64}</Project>
+      <Name>OpenMFL</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ugprv_hid_connector\ugprv_hid_connector.vbproj">
       <Project>{929cea4a-9ba0-4f5e-b0c0-80cb46fd60ba}</Project>
       <Name>ugprv_hid_connector</Name>
