--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ ugprv_ui_elements/obj/Debug/
 ugprv_ui_elements/obj/Release/
 ugprv_mma/bin/Debug/
 ugprv_mma/obj/Debug/
+LibVLC.NET/obj/
+LibVLC.NET/bin/x86/
