Juggling Code. Enabled native debugging while working with libvlc

--- a/LibVLC.NET/LibVLC.NET.csproj
+++ b/LibVLC.NET/LibVLC.NET.csproj
@@ -25,6 +25,7 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <Prefer32Bit>false</Prefer32Bit>
     <Optimize>false</Optimize>
+    <RegisterForComInterop>true</RegisterForComInterop>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <OutputPath>bin\x86\Release\</OutputPath>
