Added LibVLC.NET.Presentations, working on media elements. Updated readme.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ ugprv_mma/bin/Debug/
 ugprv_mma/obj/Debug/
 LibVLC.NET/obj/
 LibVLC.NET/bin/x86/
+LibVLC.NET.Presentation/bin/
+LibVLC.NET.Presentation/obj/
